// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tree manipulation changes the label of a branching node down the tree 1`] = `
Object {
  "top": Object {
    "children": Object {
      "branch1": Object {
        "children": Object {
          "term1": Object {
            "label": "N",
            "offset": Object {
              "dTreeX": 0,
              "dTreeY": 0,
            },
            "slice": Array [
              0,
              4,
            ],
            "triangle": false,
          },
        },
        "label": "test",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
      "term2": Object {
        "label": "VP",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": Array [
          5,
          11,
        ],
        "triangle": false,
      },
    },
    "label": "S",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation changes the label of a terminal node down the tree 1`] = `
Object {
  "top": Object {
    "children": Object {
      "branch1": Object {
        "children": Object {
          "term1": Object {
            "label": "test",
            "offset": Object {
              "dTreeX": 0,
              "dTreeY": 0,
            },
            "slice": Array [
              0,
              4,
            ],
            "triangle": false,
          },
        },
        "label": "NP",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
      "term2": Object {
        "label": "VP",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": Array [
          5,
          11,
        ],
        "triangle": false,
      },
    },
    "label": "S",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation changes the label of a top-level node 1`] = `
Object {
  "top": Object {
    "children": Object {
      "branch1": Object {
        "children": Object {
          "term1": Object {
            "label": "N",
            "offset": Object {
              "dTreeX": 0,
              "dTreeY": 0,
            },
            "slice": Array [
              0,
              4,
            ],
            "triangle": false,
          },
        },
        "label": "NP",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
      "term2": Object {
        "label": "VP",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": Array [
          5,
          11,
        ],
        "triangle": false,
      },
    },
    "label": "test",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation deletes a branching node down the tree 1`] = `
Object {
  "top": Object {
    "children": Object {
      "term1": Object {
        "label": "N",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": Array [
          0,
          4,
        ],
        "triangle": false,
      },
      "term2": Object {
        "label": "VP",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": Array [
          5,
          11,
        ],
        "triangle": false,
      },
    },
    "label": "S",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation deletes a terminal node down the tree 1`] = `
Object {
  "top": Object {
    "children": Object {
      "branch1": Object {
        "children": Object {
          "term1": Object {
            "label": "N",
            "offset": Object {
              "dTreeX": 0,
              "dTreeY": 0,
            },
            "slice": Array [
              0,
              4,
            ],
            "triangle": false,
          },
        },
        "label": "NP",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
    },
    "label": "S",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation deletes a top-level node 1`] = `
Object {
  "branch1": Object {
    "children": Object {
      "term1": Object {
        "label": "N",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": Array [
          0,
          4,
        ],
        "triangle": false,
      },
    },
    "label": "NP",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term2": Object {
    "label": "VP",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": Array [
      5,
      11,
    ],
    "triangle": false,
  },
}
`;

exports[`tree manipulation deletes two nodes with ancestor-descendant relationship at once 1`] = `
Object {
  "branch1": Object {
    "children": Object {},
    "label": "NP",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term2": Object {
    "label": "VP",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": Array [
      5,
      11,
    ],
    "triangle": false,
  },
}
`;

exports[`tree manipulation deletes two nodes with direct parent-child relationship at once 1`] = `
Object {
  "branch1": Object {
    "children": Object {
      "term1": Object {
        "label": "N",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": Array [
          0,
          4,
        ],
        "triangle": false,
      },
    },
    "label": "NP",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
}
`;

exports[`tree manipulation deletes two nodes with no ancestor-descendant relationship at once 1`] = `
Object {
  "top": Object {
    "children": Object {
      "branch1": Object {
        "children": Object {},
        "label": "NP",
        "offset": Object {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
    },
    "label": "S",
    "offset": Object {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation inserts a branching node down the tree with a branching child 1`] = `
Object {
  "nodes": Object {
    "top": Object {
      "children": Object {
        "new": Object {
          "children": Object {
            "branch1": Object {
              "children": Object {
                "term1": Object {
                  "label": "N",
                  "offset": Object {
                    "dTreeX": 0,
                    "dTreeY": 0,
                  },
                  "slice": Array [
                    0,
                    4,
                  ],
                  "triangle": false,
                },
              },
              "label": "NP",
              "offset": Object {
                "dTreeX": 0,
                "dTreeY": 0,
              },
            },
          },
          "label": "?",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
        },
        "term2": Object {
          "label": "VP",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
          "slice": Array [
            5,
            11,
          ],
          "triangle": false,
        },
      },
      "label": "S",
      "offset": Object {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": Object {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation inserts a branching node down the tree with a terminal child 1`] = `
Object {
  "nodes": Object {
    "top": Object {
      "children": Object {
        "branch1": Object {
          "children": Object {
            "new": Object {
              "children": Object {
                "term1": Object {
                  "label": "N",
                  "offset": Object {
                    "dTreeX": 0,
                    "dTreeY": 0,
                  },
                  "slice": Array [
                    0,
                    4,
                  ],
                  "triangle": false,
                },
              },
              "label": "N'",
              "offset": Object {
                "dTreeX": 0,
                "dTreeY": 0,
              },
            },
          },
          "label": "NP",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
        },
        "term2": Object {
          "label": "VP",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
          "slice": Array [
            5,
            11,
          ],
          "triangle": false,
        },
      },
      "label": "S",
      "offset": Object {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": Object {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation inserts a branching node down the tree with two children 1`] = `
Object {
  "nodes": Object {
    "top": Object {
      "children": Object {
        "new": Object {
          "children": Object {
            "branch1": Object {
              "children": Object {
                "term1": Object {
                  "label": "N",
                  "offset": Object {
                    "dTreeX": 0,
                    "dTreeY": 0,
                  },
                  "slice": Array [
                    0,
                    4,
                  ],
                  "triangle": false,
                },
              },
              "label": "NP",
              "offset": Object {
                "dTreeX": 0,
                "dTreeY": 0,
              },
            },
            "term2": Object {
              "label": "VP",
              "offset": Object {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": Array [
                5,
                11,
              ],
              "triangle": false,
            },
          },
          "label": "?",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
        },
      },
      "label": "S",
      "offset": Object {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": Object {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation inserts a top-level branching node with one child 1`] = `
Object {
  "nodes": Object {
    "branch1": Object {
      "children": Object {
        "term1": Object {
          "label": "N",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
          "slice": Array [
            0,
            4,
          ],
          "triangle": false,
        },
      },
      "label": "NP",
      "offset": Object {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "new": Object {
      "children": Object {
        "term2": Object {
          "label": "V",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
          "slice": Array [
            5,
            11,
          ],
          "triangle": false,
        },
      },
      "label": "VP",
      "offset": Object {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
  },
  "offset": Object {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation inserts a top-level branching node with two children 1`] = `
Object {
  "nodes": Object {
    "new": Object {
      "children": Object {
        "branch1": Object {
          "children": Object {
            "term1": Object {
              "label": "N",
              "offset": Object {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": Array [
                0,
                4,
              ],
              "triangle": false,
            },
          },
          "label": "NP",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
        },
        "term2": Object {
          "label": "V",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
          "slice": Array [
            5,
            11,
          ],
          "triangle": false,
        },
      },
      "label": "S",
      "offset": Object {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
  },
  "offset": Object {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation inserts a top-level terminal node 1`] = `
Object {
  "nodes": Object {
    "new": Object {
      "label": "V",
      "offset": Object {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": Array [
        5,
        11,
      ],
      "triangle": false,
    },
    "top": Object {
      "children": Object {
        "branch1": Object {
          "children": Object {
            "term1": Object {
              "label": "N",
              "offset": Object {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": Array [
                0,
                4,
              ],
              "triangle": false,
            },
          },
          "label": "NP",
          "offset": Object {
            "dTreeX": 0,
            "dTreeY": 0,
          },
        },
      },
      "label": "S",
      "offset": Object {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": Object {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;
